# xpc66

./: ChangeLog  INSTALL  LICENSE.md  NEWS  README.md  RELNOTES  meson.build  meson.options  work.sh
doc/: README
doc/dia/: xpc66.dia
doc/latex/: make_pdf.sh
doc/latex/tex/: docs-structure.tex  references.tex  tests.tex  xpc.tex  xpc66-library-guide.tex
extras/: README
extras/wraps/: xpc66.wrap
include/: c_macros.h  cpp_types.hpp  meson.build  platform_macros.h  xpc66-config.h.in  xpc66.hpp  xpc_build_macros.h
include/xpc/: automutex.hpp  condition.hpp  daemonize.hpp  recmutex.hpp  ring_buffer.hpp  shellexecute.hpp  timing.hpp  utilfunctions.hpp
src/: meson.build  xpc66.cpp
src/xpc/: automutex.cpp  condition.cpp  daemonize.cpp  recmutex.cpp  ring_buffer.cpp  shellexecute.cpp  timing.cpp  utilfunctions.cpp
tests/: README  meson.build  xpc_tests.cpp
