#*****************************************************************************
# meson.build (xpc66/src)
#-----------------------------------------------------------------------------
##
# \file        src/meson.build
# \library     xpc66
# \author      Chris Ahlstrom
# \date        2022-07-03
# \updates     2024-04-24
# \license     $XPC_SUITE_GPL_LICENSE$
#
#  This file is part of the "xpc66" library. See the top-level meson.build
#  file for license information.
#
#  Here we locate the library source-code files.  They reside in:
#
#     -  src. The main include directory for non-namespace code.
#     -  src/xpc. Contains code for cross-platform OS functions.
#
#-----------------------------------------------------------------------------

libxpc66_sources += files(
   'xpc66.cpp',
   'xpc/automutex.cpp',
   'xpc/condition.cpp',
   'xpc/daemonize.cpp',
   'xpc/recmutex.cpp',
   'xpc/ring_buffer.cpp',
   'xpc/shellexecute.cpp',
   'xpc/timing.cpp',
   'xpc/utilfunctions.cpp'
   )

#****************************************************************************
# meson.build (xpc66/src)
#----------------------------------------------------------------------------
# vim: ts=3 sw=3 ft=meson
#----------------------------------------------------------------------------
