#*****************************************************************************
# meson.build (xpc66/tests)
#-----------------------------------------------------------------------------
##
# \file        tests/meson.build
# \library     xpc66
# \author      Chris Ahlstrom
# \date        2022-07-03
# \updates     2022-11-16
# \license     $XPC_SUITE_GPL_LICENSE$
#
#  This file is part of the "xpc66" library. See the top-level meson.build
#  file for license information.
#
#-----------------------------------------------------------------------------

xpc_tests_exe = executable(
   'xpc_tests',
   sources : ['xpc_tests.cpp'],
   dependencies : xpc66_dep
   )

test('XPC Tests', xpc_tests_exe)
   
#****************************************************************************
# meson.build (xpc66/tests)
#----------------------------------------------------------------------------
# vim: ts=3 sw=3 ft=meson
#----------------------------------------------------------------------------

